# px4-autonomy-lab

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/: CMakeLists.txt  get_mavsdk.sh  m6_takeoff_land.cpp
docs/: M5_PRECISION_LANDING.md  NOTES.md  SETUP.md
ros2/: apriltag_pipeline.launch.py  tag_bridge.py
scripts/: check_connection.py  m1_telemetry_logger.py  m2_takeoff_land.py  m3_failsafe_battery.py  m3_failsafe_datalink.py  m3_mission.py  m4_offboard.py  m5_cv_node.py  m5_precision_land.py  m7_apriltag_land.py  run_sitl.sh
sim/: .bridge_config.yaml  bridge_config.tpl.yaml  onboard_recorder.py  patch_oakd_rgbd.sh  run_ros2_bridge.sh  setup_sim_extras.sh  spawn_apriltag.sh
sim/models/apriltag_36h11_0/: model.sdf
sim/models/chase_cam/: model.sdf
